# sample-c-project

./: CMakeLists.txt  Makefile  Readme.md  Readme.txt
include/: mylibrary.h
lib/: mylibrary.c
src/: main.c
